--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,5 @@
-$background: red;
+// Variables for profit, expenses & income
+$profit_b_color: #F6C96C;
+$profit_b_text: Ink Free;
+$input_text: Rockwell;
+$hover_text: whitesmoke;
