--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
 @import "./variables";
-@import "./header";
-@import "./reset.scss";
+@import "./reset";
+@import "./div";
+@import "./mediaqueries";
+@import "./buttons";
